--- a/otdel.html
+++ b/otdel.html
@@ -123,7 +123,7 @@
     </div>
   </header>
 
-  <section class="page wm">
+  <section class="page wm pb50">
     <div class="container">
       <a href="#" onclick="history.go(-1)" class="back">
         <img src="image/arrow.png" alt="">
