--- a/skoraya.html
+++ b/skoraya.html
@@ -132,7 +132,7 @@
          Скорая помощь
        </h1>
        <div class="pom-card">
-        <a href="" class="pom-card-link">
+        <div class="pom-card-link open-modal" data-modal="pom">
           <span class="pom-card__title">
             Перевозка больных
           </span>
@@ -142,10 +142,10 @@
           <span class="pom-card__image">
             <img src="image/pom.png" alt="">
           </span>
-        </a>
+        </div>
       </div>
       <div class="pom-card">
-        <a href="" class="pom-card-link">
+        <div class="pom-card-link open-modal" data-modal="pom">
           <span class="pom-card__title">
             Дежурство на <br> мероприятиях
           </span>
@@ -155,12 +155,12 @@
           <span class="pom-card__image">
             <img src="image/pom2.png" alt="">
           </span>
-        </a>
+        </div>
       </div>
       <div class="btn-center">
-        <div class="open-modal btn-pom" data-modal="pom">
+        <a href="tel:+79385320091" class="open-modal btn-pom">
           Вызвать Скорую
-        </div>
+        </a>
       </div>
       <h2 class="title-h2">
        Специальные предложения 
