--- a/speshial.html
+++ b/speshial.html
@@ -139,7 +139,7 @@
            </div>
            <div class="special-card__text">
             Запишитесь на консультацию <br> по телефону: 
-            <a href="tel:+78612210333"></a><b>+7 (861) 221 03 33</b>
+            <b>+7 (861) 221 03 33</b>
           </div>
           <div class="special-card__image">
             <img src="image/special3.png" alt="">
@@ -155,7 +155,7 @@
        </div>
        <div class="special-card__text">
         Запишитесь на консультацию <br> по телефону: 
-        <a href="tel:+78612210333"></a><b>+7 (861) 221 03 33</b>
+        <b>+7 (861) 221 03 33</b>
       </div>
       <div class="special-card__image">
         <img src="image/special3.png" alt="">
@@ -164,14 +164,14 @@
   </a>
 </div>
 <div class="col-lg-12">
- <a href="spesh-detail.html" class="link">
+ <a href="" class="link">
   <div class="special-card spesh-page">
     <div class="special-card__title">
      Узнайте свой <br> индекс массы тела
    </div>
    <div class="special-card__text">
     Запишитесь на консультацию <br> по телефону: 
-    <a href="tel:+78612210333"></a><b>+7 (861) 221 03 33</b>
+   <b>+7 (861) 221 03 33</b>
   </div>
   <div class="special-card__image">
     <img src="image/special3.png" alt="">
