--- a/speshial.html
+++ b/speshial.html
@@ -128,7 +128,7 @@
         <img src="image/arrow.png" alt="">
       </a>
       <h1 class="title-h1">
-        Обследования
+        Спецпредложения
       </h1>
       <div class="row">
         <div class="col-lg-12">
